--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,47 +5,9 @@
 }
 @import "tailwindcss";
 
-.course-details-heading-small {
-  font-size: 26px; /* Adjust the size as needed */
-}
-@media (min-width: 768px) {
-  .course-details-heading-small {
-    font-size: 36px; /* Size for medium screens and up */
-  }
+.grid-cols-auto-fit {
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-.text-home-heading-small {
-  font-size: 28px; /* Adjust the size as needed */
-}
-@media (min-width: 768px) {
-  .text-home-heading-small {
-    font-size: 34px; /* Size for medium screens and up */
-  }
-}
 
-.md\:course-details-heading-large {
-  font-size: 36px; /* Adjust the size as needed */
-}
-@media (min-width: 768px) {
-  .md\:course-details-heading-large {
-    font-size: 44px; /* Size for medium screens and up */
-  }
-}
 
-.md\:text-home-heading-large {
-  font-size: 48px; /* Adjust the size as needed */
-}
-@media (min-width: 768px) {
-  .md\:text-home-heading-large {
-    font-size: 56px; /* Size for medium screens and up */
-  }
-}
-
-.text-default {
-  font-size: 15px; /* Adjust the size as needed */
-}
-@media (min-width: 768px) {
-  .text-default {
-    font-size: 21px; /* Size for medium screens and up */
-  }
-}
