--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
+  /* margin: 0; */
+  /* padding: 0; */
   box-sizing: border-box;
   font-family: Outfit;
 }
@@ -9,5 +12,44 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
+@layer base{
+  html{
+    scroll-behavior: smooth;
+  }
+}
 
+::-webkit-scrollbar{
+  display: none;
+}
 
+.rich-text { font-size: 15px; color: #d5d7db; }
+
+.rich-text p { margin-bottom: 16px; }
+
+.rich-text h1 { font-size: 36px; font-weight: 800; color: #cfcccc; margin: 32px 0; }
+
+.rich-text h2 { font-size: 22px; font-weight: 700; color: #e7e5e5; margin: 24px 0; }
+
+.rich-text h3 { font-size: 18px; font-weight: 600; color: #333333; margin: 20px 0; }
+
+.rich-text h4 { font-size: 16px; font-weight: 500; color: #444444; margin: 16px 0; }
+
+.rich-text h5 { font-size: 14px; font-weight: 400; color: #a8a8a8; margin: 12px 0; }
+
+.rich-text h6 { font-size: 12px; font-weight: 400; color: #666666; margin: 8px 0; }
+
+.rich-text strong { font-weight: 700; }
+
+.rich-text ol { margin-left: 30px; list-style-type: decimal; }
+
+.rich-text ul { margin-left: 30px; list-style-type: disc; }
+
+.rich-text li { margin-bottom: 8px; }
+
+.max-w-course-card{
+  max-width: 424px;
+}
+
+/* .shadow-custom-card{
+  box-shadow: 0px 4px 85px 2px  rgba(182, 10, 10, 0.1);
+} */
