--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,3 +53,19 @@
 /* .shadow-custom-card{
   box-shadow: 0px 4px 85px 2px  rgba(182, 10, 10, 0.1);
 } */
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  /* -webkit-appearance: none; */
+  /* appearance: none; */
+  /* margin: 0; */
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  color: rgb(150, 11, 11); /* Change this to your desired color */
+}
